--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,9 +2,15 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
+
+
+
+*{
+  margin:0;padding: 0;box-sizing: border-box;
+  font-family: 'Inter', sans-serif;
+}
+
 
 a {
   color: inherit;
